--- a/src/app/pages/search-page/entity-list/entity-list.component.html
+++ b/src/app/pages/search-page/entity-list/entity-list.component.html
@@ -1,43 +1,59 @@
-<div class="entity-list">
+<div class="entity-list" *ngIf="data && data.length > 0">
   <div class="entity-list__title">In {{entityType}}</div>
 
-  <div class="entity-list__item" *ngFor="let d of data">
-    <div class="entity-list__item__title">{{d.fields.name || d.fields.alias || d.firstname+d.lastname }}</div>
+  <div class="entity-list__item" *ngFor="let d of data | subArray: displayCount" (click)="navigateToEntity(d)">
+    <div class="entity-list__item__title" [innerHTML]="getName(d) | highlight: query"></div>
 
     <div class="entity-list__item__fields">
       <div class="entity-list__item__fields__single" *ngIf="d.fields.firstname">
-        <div class="entity-list__item__fields__key">First Name</div>
+        <div class="entity-list__item__fields__key">First Name:</div>
         <div class="entity-list__item__fields__value">{{d.fields.firstname}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.lastname">
-        <div class="entity-list__item__fields__key">Last Name</div>
+        <div class="entity-list__item__fields__key">Last Name:</div>
         <div class="entity-list__item__fields__value">{{d.fields.lastname}}</div>
       </div>
 
+      <div class="entity-list__item__fields__single" *ngIf="d.fields.city">
+        <div class="entity-list__item__fields__key">City:</div>
+        <div class="entity-list__item__fields__value">{{d.fields.city}}</div>
+      </div>
+
+      <div class="entity-list__item__fields__single" *ngIf="d.fields.phone">
+        <div class="entity-list__item__fields__key">Phone:</div>
+        <div class="entity-list__item__fields__value">{{d.fields.phone}}</div>
+      </div>
+
       <div class="entity-list__item__fields__single" *ngIf="d.fields.sku">
-        <div class="entity-list__item__fields__key">SKU</div>
+        <div class="entity-list__item__fields__key">SKU:</div>
         <div class="entity-list__item__fields__value">{{d.fields.sku}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.amount">
-        <div class="entity-list__item__fields__key">Amount</div>
-        <div class="entity-list__item__fields__value">{{d.fields.amount}}</div>
+        <div class="entity-list__item__fields__key">Amount:</div>
+        <div class="entity-list__item__fields__value">${{d.fields.amount}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.tracking_number">
-        <div class="entity-list__item__fields__key">Amount</div>
+        <div class="entity-list__item__fields__key">Tracking Number:</div>
         <div class="entity-list__item__fields__value">{{d.fields.tracking_number}}</div>
       </div>
 
-      <div class="entity-list__item__fields__single" *ngIf="d.fields.amount">
-        <div class="entity-list__item__fields__key">Amount</div>
-        <div class="entity-list__item__fields__value">{{d.fields.amount}}</div>
+      <div class="entity-list__item__fields__single" *ngIf="d.fields.created_at && d.fields.entity_type !== 'customer'">
+        <div class="entity-list__item__fields__key">Created At:</div>
+        <div class="entity-list__item__fields__value">{{format(d.fields.created_at)}}</div>
       </div>
     </div>
   </div>
 
-  <md-spinner *ngIf="!data || data.length === 0"></md-spinner>
+  <div *ngIf="data.length > 3" class="entity-list__view-more" (click)="toggleShowMore()">
+    <span *ngIf="!showMore; else showLess">
+      view more in {{entityType}}
+    </span>
 
-  <div *ngIf="found > 3" class="entity-list__view-more">view more in {{entityType}}</div>
+    <ng-template #showLess>
+      view less in {{entityType}}
+    </ng-template>
+  </div>
 </div>
