--- a/src/app/reports/transactions-report/transactions-report.component.html
+++ b/src/app/reports/transactions-report/transactions-report.component.html
@@ -26,7 +26,7 @@
   [limit]="limit"
   [page]="page"
   [paginationString]="getPaginationString()"
-  (selected)="navigate($event)"
+  (filterSelected)="addFilter($event)"
   (next)="fetchNext()"
   (previous)="fetchPrevious()"
   (updateLimit)="updateLimit($event)">
