Remove perfect-customer transaction table spinner

--- a/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
@@ -64,7 +64,9 @@
       </table>
     </div>
 
-    <ng-template #spinTransactions><md-spinner></md-spinner></ng-template>
+    <ng-template #spinTransactions>
+      <!--<md-spinner></md-spinner>-->
+    </ng-template>
 
     <div class="perfect-customer__credit-cards">
       <div *ngFor="let ccard of customer.creditCards" class="perfect-customer__credit-cards__item">
