Change color of report table filter cells

--- a/src/assets/scss/_reports-table.scss
+++ b/src/assets/scss/_reports-table.scss
@@ -59,6 +59,10 @@
       tr {
         border-bottom: 1px solid #d0d0d0;
 
+        .filter-cell {
+          color: #5AA3E8;
+        }
+
         td {
           font-size: 12px;
           cursor: pointer;
