--- a/src/app/reports/components/report-table/report-table.component.html
+++ b/src/app/reports/components/report-table/report-table.component.html
@@ -31,7 +31,7 @@
 
       <tbody>
         <tr *ngFor="let d of data | filterEntities: filterString | sortEntities: sortParams.mappingFunction: sortParams.sortOrder">
-          <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'" (click)="cellClicked(params, d)">{{params.mappingFunction(d)}}</td>
+          <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'" (click)="cellClicked(params, d)" [class.filter-cell]="params.isFilter">{{params.mappingFunction(d)}}</td>
         </tr>
       </tbody>
     </table>
