--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -12,7 +12,8 @@ $main-color: #9B9A9B;
 
   &__items {
     &--expanded {
-      display: inline-block;
+      display: flex;
+      align-items: center;
 
       @media #{$medium-and-down} {
         display: none;
@@ -120,38 +121,14 @@ $main-color: #9B9A9B;
 
   &__acl {
 
-    &__container {
-      display: inline-block;
-      position: relative;
-    }
 
     &__icon {
       color: $main-color;
       margin-left: 10px;
-      margin-right: 5px;
     }
 
-    &__arrow {
-      margin-right: 15px;
-      cursor: pointer;
-    }
-
-    &__menu {
-      position: absolute;
-      top: 45px;
-      right: 20px;
-      background: white;
-      box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
-      z-index: 1;
-
-      div {
-        padding: 10px 20px;
-        cursor: pointer;
-
-        &:hover {
-          background-color: rgba(0, 0, 0, 0.0588);
-        }
-      }
+    &__dropdown {
+      margin-right: 10px;
     }
   }
 
