--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -22,6 +22,8 @@
       </p>
       <div>
         <button md-raised-button (click)="showFormScreen()">Continue</button>
+
+        <div class="registration--in__welcome__sign-out"><span (click)="authService.logout()">Sign Out</span></div>
       </div>
     </div>
   </div>
