--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -117,15 +117,7 @@ $main-color: #9B9A9B;
     &__icon {
       color: $main-color;
     }
-  }
-
-  &__acl {
-
-    &__icon {
-      color: $main-color;
-      margin-left: 10px;
-    }
-  }
+  }#9B9A9B
 
   &__separator {
     display: inline-block;
