--- a/src/app/navigation/topnav/profile-dropdown/profile-dropdown.component.scss
+++ b/src/app/navigation/topnav/profile-dropdown/profile-dropdown.component.scss
@@ -2,9 +2,10 @@
   position: relative;
   height: 70px;
   cursor: pointer;
+  transition: background, box-shadow 0.25s ease-in-out;
 
   &--active {
-    background: rgba(0, 0, 0, 0.033);
+    background: #F7F7F7;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
   }
 
@@ -30,6 +31,10 @@
     }
 
     &__arrow {
+      margin-left: 8px;
+      font-size: 18px;
+      width: 18px;
+      height: 18px;
       transition: 0.2s ease-in-out;
     }
 
@@ -54,9 +59,10 @@
 
     &__item {
       padding: 15px;
+      white-space: nowrap;
 
       &:hover {
-        background: rgba(0, 0, 0, 0.033);
+        background: #F7F7F7;
       }
     }
   }
