--- a/src/app/shared/components/simple-dropdown/simple-dropdown.component.scss
+++ b/src/app/shared/components/simple-dropdown/simple-dropdown.component.scss
@@ -1,47 +1,64 @@
 .simple-dropdown {
   position: relative;
+  height: 70px;
   cursor: pointer;
-  height: 45px;
-  line-height: 45px;
+  transition: background, box-shadow 0.25s ease-in-out;
+
+  &--active {
+    background: #F7F7F7;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
+  }
 
   &__header {
     display: flex;
     align-items: center;
-    padding-left: 15px;
+    padding: 0 10px;
+    height: 70px;
 
-    &--active {
-      background: white;
-      box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    &__icon {
+      color: #9B9A9B;
+      margin-right: 8px;
     }
 
-    md-icon {
-      margin-left: 5px;
+    &__hello {
+      font-weight: 300;
     }
 
-    .icon--hidden {
-      visibility: hidden;
+    &__name {
+      margin-left: 3px;
+    }
+
+    &__arrow {
+      margin-left: 8px;
+      font-size: 18px;
+      width: 18px;
+      height: 18px;
+      transition: 0.2s ease-in-out;
+    }
+
+    .arrow--rotate {
+      transform: rotate(90deg);
     }
   }
 
-  &__selected {
-
-  }
-
-  &__dropdown {
+  &__menu {
     position: absolute;
+    top: 70px;
+    height: 0;
+    overflow: hidden;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.12), -1px 1px 1px rgba(0, 0, 0, 0.12);
     background: white;
     width: 100%;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-    max-height: 385px;
-    overflow: auto;
+    transition: 0.25s ease-in-out;
 
-    &__element {
-      padding: 0 15px;
+    &__item {
+      padding: 15px;
+      white-space: nowrap;
 
       &:hover {
-        background: rgba(0, 0, 0, 0.033);
+        background: #F7F7F7;
       }
     }
   }
 }
+
